--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   </li>
                   <li class="list-group-item bg-dark">
                     <label for="city">Enter City</label>
-                    <input type="text" placeholder="roswell" id="city" />
+                    <input type="text" placeholder="fresno" id="city" />
                   </li>
                   <li class="list-group-item bg-dark">
                     <label for="state">Enter State</label>
